--- a/static/rivers.html
+++ b/static/rivers.html
@@ -151,6 +151,11 @@
                     <br>
                     <button id="center_button">CENTER</button>
                     <button onClick="load_selection()">&lt;&lt; LOAD JSON</button>
+                    <select id="minecraftVersion">
+                        <option value="1.7">Java 1.7 - 1.12</option>
+                        <option value="1.13">Java 1.13</option>
+                        <option value="1.14">Java 1.14</option>
+                    </select>
                 </div>
             </div>
             <div style="grid-column: 3 / 4; grid-row: 2 / 3;">
