--- a/static/rivers.html
+++ b/static/rivers.html
@@ -125,6 +125,13 @@
                         <option value="37">mesa [37]</option>
                         <option value="38">mesa_rock [38]</option>
                         <option value="39">mesa_clear_rock [39]</option>
+                        <option value="44">warm_ocean [44]</option>
+                        <option value="45">lukewarm_ocean [45]</option>
+                        <option value="46">cold_ocean [46]</option>
+                        <option value="47">warm_deep_ocean [47]</option>
+                        <option value="48">lukewarm_deep_ocean [48]</option>
+                        <option value="49">cold_deep_ocean [49]</option>
+                        <option value="50">frozen_deep_ocean [50]</option>
                         <option value="129">mutated_plains [129]</option>
                         <option value="130">mutated_desert [130]</option>
                         <option value="131">mutated_extreme_hills [131]</option>
@@ -146,6 +153,8 @@
                         <option value="165">mutated_mesa [165]</option>
                         <option value="166">mutated_mesa_rock [166]</option>
                         <option value="167">mutated_mesa_clear_rock [167]</option>
+                        <option value="168">bamboo_jungle [168]</option>
+                        <option value="169">bamboo_jungle_hills [169]</option>
                     </select>
                     <button id="extraBiomeAdd" onClick="addExtraBiome()">+</button>
                     <br>
