--- a/static/index.html
+++ b/static/index.html
@@ -104,6 +104,8 @@
             }, function( err ) {
                 console.error(err);
             });
+
+            startGame(0);
         </script>
     </body>
 </html>
