--- a/static/slime_map.html
+++ b/static/slime_map.html
@@ -203,6 +203,7 @@
                     console.error(err);
                 });
             }
+            startGame(0);
         </script>
     </body>
 </html>
