Clarify wrong coordinate text in slime_map
So I can avoid actually fixing the bug

--- a/static/slime_map.html
+++ b/static/slime_map.html
@@ -22,7 +22,7 @@
         <div style="width: 100%;">
             <div style="float: left; width: 66%;">
             <canvas id="demo" width="720" height="480"></canvas>
-            <div id="position_info"></div>
+            <div id="position_info"></div>(this should say chunk instead of block: one pixel in the image is one chunk)
             <div>
                 <button onClick="Game.zoomBy(0.8)">ZOOM -</button>
                 <button onClick="Game.zoomBy(1.25)">ZOOM +</button>
