--- a/static/rivers.html
+++ b/static/rivers.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>slime_seed_finder playground</title>
         <style>
             body {
@@ -54,14 +54,27 @@
         <script src="json-stringify-pretty-compact.js"></script>
     </head>
     <body>
-        <a href="https://github.com/Badel2/slime_seed_finder">SLIME SEED FINDER</a>
-        <strong>Under construction.</strong><br>
+        <a href="https://github.com/Badel2/slime_seed_finder"
+            >SLIME SEED FINDER</a
+        >
+        <strong>Under construction.</strong><br />
         <div>
-            <div id="progressBarLabel" class="progress" data-label="NOT RUNNING">
-                <span id="progressBarSpan" class="value" style="width:0%;"></span>
+            <div
+                id="progressBarLabel"
+                class="progress"
+                data-label="NOT RUNNING"
+            >
+                <span
+                    id="progressBarSpan"
+                    class="value"
+                    style="width:0%;"
+                ></span>
             </div>
         </div>
-        <div id="gridContainer" style="display: grid; grid-auto-flow: dense; align-items: center;">
+        <div
+            id="gridContainer"
+            style="display: grid; grid-auto-flow: dense; align-items: center;"
+        >
             <div style="grid-column: 1 / 3; grid-row: 1 / 2;">
                 <div>
                     <button onClick="Game.zoomBy(0.8)">ZOOM -</button>
@@ -74,18 +87,25 @@
                         <option value="bucket">BUCKET</option>
                         <option value="bucket_erase">BUCKET ERASE</option>
                     </select>
-                    <button id="undo_button" onClick="undo_selection()">UNDO</button>
+                    <button id="undo_button" onClick="undo_selection()">
+                        UNDO
+                    </button>
                 </div>
-                <div id="position_info">Hover the mouse to show coordinates</div>
+                <div id="position_info">
+                    Hover the mouse to show coordinates
+                </div>
             </div>
-            <div class="canvasContainer" style="grid-column: 1 / 3; grid-row: 2 / 4;">
+            <div
+                class="canvasContainer"
+                style="grid-column: 1 / 3; grid-row: 2 / 4;"
+            >
                 <canvas id="demo"></canvas>
             </div>
             <div style="grid-column: 3 / 4; grid-row: 1 / 2;">
                 <div id="extraBiomes">
-                    Insert extra biomes here: (block x, block z)<br>
-                    <input id="extraBiomeX" size=4>
-                    <input id="extraBiomeZ" size=4>
+                    Insert extra biomes here: (block x, block z)<br />
+                    <input id="extraBiomeX" size="4" />
+                    <input id="extraBiomeZ" size="4" />
                     <select id="extraBiomeId" style="width: 250px;">
                         <option value="0">ocean [0]</option>
                         <option value="1">plains [1]</option>
@@ -119,7 +139,9 @@
                         <option value="31">cold_taiga_hills [31]</option>
                         <option value="32">redwood_taiga [32]</option>
                         <option value="33">redwood_taiga_hills [33]</option>
-                        <option value="34">extreme_hills_with_trees [34]</option>
+                        <option value="34"
+                            >extreme_hills_with_trees [34]</option
+                        >
                         <option value="35">savanna [35]</option>
                         <option value="36">savanna_rock [36]</option>
                         <option value="37">mesa [37]</option>
@@ -142,24 +164,36 @@
                         <option value="149">mutated_jungle [149]</option>
                         <option value="151">mutated_jungle_edge [151]</option>
                         <option value="155">mutated_birch_forest [155]</option>
-                        <option value="156">mutated_birch_forest_hills [156]</option>
+                        <option value="156"
+                            >mutated_birch_forest_hills [156]</option
+                        >
                         <option value="157">mutated_roofed_forest [157]</option>
                         <option value="158">mutated_taiga_cold [158]</option>
                         <option value="160">mutated_redwood_taiga [160]</option>
-                        <option value="161">mutated_redwood_taiga_hills [161]</option>
-                        <option value="162">mutated_extreme_hills_with_trees [162]</option>
+                        <option value="161"
+                            >mutated_redwood_taiga_hills [161]</option
+                        >
+                        <option value="162"
+                            >mutated_extreme_hills_with_trees [162]</option
+                        >
                         <option value="163">mutated_savanna [163]</option>
                         <option value="164">mutated_savanna_rock [164]</option>
                         <option value="165">mutated_mesa [165]</option>
                         <option value="166">mutated_mesa_rock [166]</option>
-                        <option value="167">mutated_mesa_clear_rock [167]</option>
+                        <option value="167"
+                            >mutated_mesa_clear_rock [167]</option
+                        >
                         <option value="168">bamboo_jungle [168]</option>
                         <option value="169">bamboo_jungle_hills [169]</option>
                     </select>
-                    <button id="extraBiomeAdd" onClick="addExtraBiome()">+</button>
-                    <br>
+                    <button id="extraBiomeAdd" onClick="addExtraBiome()">
+                        +
+                    </button>
+                    <br />
                     <button id="center_button">CENTER</button>
-                    <button onClick="load_selection()">&lt;&lt; LOAD JSON</button>
+                    <button onClick="load_selection()">
+                        &lt;&lt; LOAD JSON
+                    </button>
                     <select id="minecraftVersion">
                         <option value="1.7">Java 1.7 - 1.12</option>
                         <option value="1.13">Java 1.13</option>
@@ -168,25 +202,61 @@
                 </div>
             </div>
             <div style="grid-column: 3 / 4; grid-row: 2 / 3;">
-                <textarea id="selection_output" class="code" rows="20"></textarea>
+                <textarea
+                    id="selection_output"
+                    class="code"
+                    rows="20"
+                ></textarea>
             </div>
             <div style="grid-column: 4 / 5; grid-row: 1 / 2;">
-              <input id="num_candidates" class="code" rows="1" value="Estimate runtime" readonly>
-              <button onClick="countCandidates()">ESTIMATE RUNTIME</button>
-              <button id="comphdl_start" onClick="runGui()">RUN!</button>
+                <input
+                    id="num_candidates"
+                    class="code"
+                    rows="1"
+                    value="Estimate runtime"
+                    readonly
+                />
+                <button onClick="countCandidates()">ESTIMATE RUNTIME</button>
+                <button id="comphdl_start" onClick="runGui()">RUN!</button>
             </div>
             <div style="grid-column: 4 / 5; grid-row: 2 / 3;">
-              <textarea id="output_textarea" class="code" rows="20" readonly>Found seeds will appear here.</textarea>
+                <textarea id="output_textarea" class="code" rows="20" readonly>
+Found seeds will appear here.</textarea
+                >
             </div>
 
-            <div id="oneCanvas" class="canvasContainer" style="grid-column: 3 / 4; grid-row: 3 / 4;">
-                <canvas id="mapLayer43" class="pixelated" style="width: 100%;"></canvas>
+            <div
+                id="oneCanvas"
+                class="canvasContainer"
+                style="grid-column: 3 / 4; grid-row: 3 / 4;"
+            >
+                <canvas
+                    id="mapLayer43"
+                    class="pixelated"
+                    style="width: 100%;"
+                ></canvas>
             </div>
-            <div id="twoCanvas" class="canvasContainer" style="grid-column: 4 / 5; grid-row: 3 / 4;">
-                <canvas id="mapLayer42" class="pixelated" style="width: 100%;"></canvas>
+            <div
+                id="twoCanvas"
+                class="canvasContainer"
+                style="grid-column: 4 / 5; grid-row: 3 / 4;"
+            >
+                <canvas
+                    id="mapLayer42"
+                    class="pixelated"
+                    style="width: 100%;"
+                ></canvas>
             </div>
-            <div id="twoCanvasC" class="canvasContainer" style="grid-column: 4 / 5; grid-row: 3 / 4;">
-                <canvas id="mapLayer42Candidate" class="pixelated" style="opacity: 0.5; width: 100%;"></canvas>
+            <div
+                id="twoCanvasC"
+                class="canvasContainer"
+                style="grid-column: 4 / 5; grid-row: 3 / 4;"
+            >
+                <canvas
+                    id="mapLayer42Candidate"
+                    class="pixelated"
+                    style="opacity: 0.5; width: 100%;"
+                ></canvas>
             </div>
         </div>
         <script type="text/javascript" src="rivers_common.js"></script>
