Add support for zipped worlds instead of .mca files

--- a/static/anvil.html
+++ b/static/anvil.html
@@ -95,11 +95,9 @@
                 Find the seed from a minecraft save based on the biome data.
             </div>
             <div class="card" style="grid-column: 1 / 2; grid-row: 2 / 3;">
-                Select a minecraft region file.<br />
-                You can find them in the region/ folder inside a saved world.<br />
-                They look like "r.0.0.mca".<br />
+                Select a minecraft world save in zip file format.<br />
                 This file will not be uploaded to any server, don't worry.<br /><br />
-                <input type="file" id="filepicker" accept=".mca" />
+                <input type="file" id="filepicker" accept=".mca,.zip" />
             </div>
             <div class="card" style="grid-column: 1 / 2; grid-row: 3 / 4;">
                 Choose the minecraft version used to GENERATE the world.<br />
