--- a/static/rivers.html
+++ b/static/rivers.html
@@ -198,6 +198,7 @@
                         <option value="1.7">Java 1.7 - 1.12</option>
                         <option value="1.13">Java 1.13</option>
                         <option value="1.14">Java 1.14</option>
+                        <option value="1.15">Java 1.15</option>
                     </select>
                 </div>
             </div>
